:bug: fix z-index of bootstrap-slider > tooltip

--- a/src/css/_override_bootstrap.scss
+++ b/src/css/_override_bootstrap.scss
@@ -40,6 +40,8 @@ div.slider {
         margin: 0;
     }
 
+    div.tooltip { z-index: 1; }
+
     &.slider-horizontal {
         div.slider-track {
             top: 0; height: 100%;
@@ -49,6 +51,24 @@ div.slider {
     &.slider-vertical {
         div.slider-track {
             left: 0; width: 100%;
+        }
+    }
+}
+
+div.modal {
+    div.modal-dialog {
+        color: #888;
+        border: none;
+        div.modal-header, hr {
+            border-color: #444;
+        }
+        div.modal-header {
+            button.close > span {
+                color: white;
+            }
+        }
+        div.modal-content {
+            background-color: #222;
         }
     }
 }
